--- a/index.html
+++ b/index.html
@@ -9,6 +9,38 @@
     <title>Vural Hukuk ve Danışmanlık</title>
 </head>
 <body>
+<!-- Menü Burada Olacak-->
+<nav class="menu">
+    <ul>
+        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
+        <li><a href="hakkimizda.html">Hakkımızda</a></li>
+        <li><a href="iletisim.html">İletişim</a></li>      
+    </ul>
+</nav>
+<hr>
+<!--İçerik Burada Olacak-->
+
+<section>
+    <h1>Vural Hukuk ve Danışmanlık</h1>
+    <img src="image/adalet.png" alt="Adalet" width="300px">
+
+
+
+</section>
+
+
+<!--Footer Burada Olacak-->
+<hr>
+<footer>
+    <ul>
+        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
+        <li><a href="hakkimizda.html">Hakkımızda</a></li>
+        <li><a href="iletisim.html">İletişim</a></li>      
+    </ul>
+
+</footer>
     
 </body>
 </html>
