kaba taslak hazır

--- a/avukatlarımız.html
+++ b/avukatlarımız.html
@@ -12,7 +12,7 @@
     <!-- Menü Burada Olacak-->
 <nav>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
@@ -23,6 +23,17 @@
 <!--İçerik Burada Olacak-->
 
 <section>
+    <h1>Vural Hukuk ve Danışmanlık</h1>
+    <img src="image/adalet.png" alt="Adalet" width="300px">
+
+    <h3>Lorem, ipsum.</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro obcaecati fugit, ea nesciunt sit beatae, dicta aperiam dolorem delectus ducimus ratione alias quod dignissimos modi cum doloribus expedita saepe omnis accusamus necessitatibus! Dolores laudantium tempora perferendis rem saepe, excepturi obcaecati voluptate hic! Reiciendis dolore ipsum, repudiandae est eaque quo maiores.</p>
+    <h3>Aliquid, quod.</h3>
+    <p>Ratione accusamus quam ullam illo tenetur enim obcaecati aspernatur aut nesciunt, amet veritatis minus modi. Aut qui, labore quam aperiam voluptas omnis sed in cum vel modi aliquid expedita, eligendi doloribus, praesentium consectetur commodi maiores saepe iusto repellat rem ipsum alias eum ut. Saepe nulla, voluptate eaque ducimus facilis ipsam.</p>
+    <h3>Iste, eaque.</h3>
+    <p>Neque deserunt, veritatis sit temporibus nisi soluta, quidem facilis nobis sequi voluptates maxime facere. Ipsa rem, ut quibusdam dolorum, dignissimos expedita vel temporibus cum, laudantium modi accusamus iure reprehenderit dicta soluta itaque natus sed id illum voluptatem tenetur? Ab cupiditate aliquam iusto nobis quia? Nam non tenetur aspernatur eum aliquid.</p>
+    <h3>Non, numquam?</h3>
+    <p>Reprehenderit, voluptas voluptatibus similique minima sapiente suscipit, consectetur voluptatum tenetur qui excepturi itaque a odit provident, laborum delectus obcaecati asperiores pariatur fuga. Labore distinctio adipisci suscipit magnam veritatis nemo quis quidem autem ea delectus, sapiente debitis esse, assumenda blanditiis. Sapiente hic nesciunt porro architecto impedit a natus beatae assumenda obcaecati?</p>
     
 
 
@@ -34,7 +45,7 @@
 <hr>
 <footer>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
