--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -12,7 +12,7 @@
     <!-- Menü Burada Olacak-->
 <nav>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
@@ -22,7 +22,11 @@
 <!--İçerik Burada Olacak-->
 
 <section>
-    
+    <h1>Vural Hukuk ve Danışmanlık</h1>
+    <img src="image/adalet.png" alt="Adalet" width="300px">
+
+    <h3>Hakkımızda</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus nostrum nihil sunt quos modi quasi iusto neque sit veniam amet, est possimus et ducimus. Neque animi ad maxime voluptate nemo doloremque, voluptatem, non repudiandae rerum quis adipisci accusantium et, eveniet qui eos temporibus architecto cumque deleniti veritatis earum? Dolorem laboriosam provident voluptas quaerat sunt tempore? Repellendus nobis incidunt explicabo labore omnis repellat corporis laboriosam exercitationem rem quibusdam quisquam qui commodi voluptatibus dicta itaque illum eveniet, quod neque non dignissimos aperiam amet, delectus eum. Rerum ducimus aut rem adipisci repudiandae, enim qui, ipsa fuga ea consequuntur eveniet possimus non, similique iure vitae dignissimos. Culpa, suscipit eos, soluta doloremque facere quis, tenetur reiciendis recusandae ipsam aliquam perspiciatis ea libero rerum quasi tempore voluptatem. Ratione sapiente reiciendis voluptatem dolores qui est repudiandae, error nesciunt neque, nisi eligendi veritatis sunt esse illum! Voluptatibus molestiae ducimus officia, vitae quia obcaecati accusantium mollitia nemo incidunt nobis.</p>
 
 
 
@@ -33,7 +37,7 @@
 <hr>
 <footer>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
