--- a/iletisim.html
+++ b/iletisim.html
@@ -9,10 +9,10 @@
     <title>Vural Hukuk ve Danışmanlık</title>
 </head>
 <body>
-    <!-- Menü Burada Olacak-->
+<!-- Menü Burada Olacak-->
 <nav>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
@@ -22,18 +22,22 @@
 <!--İçerik Burada Olacak-->
 
 <section>
-    
-
-
-
+    <h1>Vural Hukuk ve Danışmanlık</h1>
+    <img src="image/adalet.png" alt="Adalet" width="300px">
+    <h3>Adresimiz</h3>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, aliquam!</p>
+    <h3>Telefon Numaramız</h3>
+    <a href="tel: +905516365954" target="_blank" title="Bizi arayın"><img src="image/telefon.png" alt="Bizi arayın" width="8px">05516365954</a>
+    <h3>E-Mail Adresimiz</h3>
+    <a href="mailto: mehmeterdemvural@gmail.com" target="_blank" title="Bize e-mail atın"><img src="image/mail.png" alt="Bize e-mail atın" width="12px">mehmeterdemvural@gmail.com</a>
 </section>
-
 
 <!--Footer Burada Olacak-->
 <hr>
+
 <footer>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
