--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 <!-- Menü Burada Olacak-->
 <nav class="menu">
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
     </ul>
 </nav>
 <hr>
+
 <!--İçerik Burada Olacak-->
 
 <section>
     <h1>Vural Hukuk ve Danışmanlık</h1>
     <img src="image/adalet.png" alt="Adalet" width="300px">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi dolor placeat tempore facere accusamus dolore, pariatur minus perspiciatis in fuga! Odio eaque, quasi debitis tempore magni fuga, tenetur eveniet nam possimus aliquam placeat voluptate iste. Sit sed commodi, iusto blanditiis quisquam sapiente, architecto vitae id ipsam reprehenderit et laborum, minus expedita earum facilis iure similique quam perspiciatis? Porro harum dolore voluptate! Culpa veritatis dolorum, eaque similique quibusdam tempore iure et fuga quidem sunt, recusandae inventore. Iste dolore, omnis labore obcaecati ab maxime, placeat voluptas, dolorum nihil dolores blanditiis voluptatum. Laudantium repudiandae iusto similique dignissimos vero, dolores qui molestias ea sint cupiditate aspernatur nemo laboriosam veniam error tenetur amet facilis numquam! Hic, corrupti debitis. Mollitia temporibus, quae magnam modi eius fugiat repellendus assumenda numquam doloribus corporis ullam unde dicta perspiciatis impedit dolore, debitis laboriosam quo eos possimus voluptate odit nemo voluptatum. Ipsa incidunt, expedita eum quasi inventore modi nostrum iste vero accusantium nemo distinctio, laudantium dolore eveniet numquam exercitationem vel, optio ad possimus hic cupiditate officia repudiandae excepturi! Nisi animi eveniet dolor voluptatum exercitationem, officia quaerat. Voluptatibus cupiditate porro rerum ipsa. Ipsum dolorem voluptatem error eius iure aperiam iusto quidem officiis possimus provident ut, quo odio nesciunt fugiat magnam, in minima!</p>
 
 
 
@@ -34,7 +36,7 @@
 <hr>
 <footer>
     <ul>
-        <li><a href="index.html">Ana Sayfa</a></li>
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
         <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
         <li><a href="hakkimizda.html">Hakkımızda</a></li>
         <li><a href="iletisim.html">İletişim</a></li>      
