--- a/iletisim.html
+++ b/iletisim.html
@@ -12,10 +12,10 @@
 <!-- Menü Burada Olacak-->
 <nav>
     <ul>
-        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
-        <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
-        <li><a href="hakkimizda.html">Hakkımızda</a></li>
-        <li><a href="iletisim.html">İletişim</a></li>      
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" title="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
+        <li><a href="avukatlarımız.html" title="Avukatlarımız">Avukatlarımız</a></li>
+        <li><a href="hakkimizda.html" title="Hakkımızda">Hakkımızda</a></li>
+        <li><a href="iletisim.html" title="İletişim">İletişim</a></li>      
     </ul>
 </nav>
 <hr>
@@ -37,10 +37,10 @@
 
 <footer>
     <ul>
-        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
-        <li><a href="avukatlarımız.html">Avukatlarımız</a></li>
-        <li><a href="hakkimizda.html">Hakkımızda</a></li>
-        <li><a href="iletisim.html">İletişim</a></li>      
+        <li><a href="index.html"><img src="image/anasayfasimgesi.jpg" alt="Ana Sayfa" title="Ana Sayfa" width="14px"> Ana Sayfa</a></li>
+        <li><a href="avukatlarımız.html" title="Avukatlarımız">Avukatlarımız</a></li>
+        <li><a href="hakkimizda.html" title="Hakkımızda">Hakkımızda</a></li>
+        <li><a href="iletisim.html" title="İletişim">İletişim</a></li>      
     </ul>
     
 </body>
